fix: try again-again

--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -60,6 +60,7 @@ It's highly recommended to watch spec-specific PoV videos for this fight.
 link: https://www.wowhead.com/spell=366377
 title: World Crusher
 subtitle: Pool Soaks
+unique: world-p1
 ---
 
 On Mythic the boss will attack Azeroth with [World Crusher](https://www.wowhead.com/spell=366377) in Phase 1 at the start of the fight, spawning multiple pools of [Blood of Azeroth](https://www.wowhead.com/spell=366401) and taking Azeroth down to 37% Health.
@@ -89,6 +90,7 @@ The Shaman (far right) waits for the hunter in the video to arrive in position b
 link: https://www.wowhead.com/spell=360282/rune-of-damnation
 title: Rune of Damnation
 subtitle: Bomb Jumping
+unique: bomb-p1
 ---
 The boss switches between different rune mechanics each phase. In phase 1 the rune mechanic is a bomb applied to 6 players, 3 more than Heroic. A WeakAura will assign players in a triangle pattern indicated on their screen, e.g. `front`, `left`, `right`, ...etc. Another WeakAura will tell you when to jump in the hole.
 
@@ -115,6 +117,7 @@ The orientation of this triangle is always facing Azeroth.
 link: https://www.wowhead.com/spell=362028
 title: Relentless Domination
 subtitle: Hide
+unique: relent-p1
 ---
 Dominated pylons cast [Tyranny](https://www.wowhead.com/spell=366030/tyranny), marking several players with yellow lines and launching orbs in their direction as seen on Heroic.
 
@@ -131,6 +134,7 @@ Players with lines should only dodge other lines by running directly at, or dire
 link: https://www.wowhead.com/spell=363893/martyrdom
 title: Martyrdom
 subtitle: Tank Soak
+unique: marty-p1
 ---
 The tank mechanic [Martyrdom](https://www.wowhead.com/spell=363893/martyrdom) is a sequence of attacks:
 
@@ -149,6 +153,7 @@ On Mythic players hit are given a vulnerability, [Relentless Misery](https://www
 link: https://www.wowhead.com/spell=362631/chains-of-oppression
 title: Chains of Oppression
 subtitle: Gateway
+unique: chains-p1
 ---
 
 The boss will grip everyone and apply [Chains of Oppression](https://www.wowhead.com/spell=362631/chains-of-oppression). Players need to run away to decrease the falloff damage from [Oppression](https://www.wowhead.com/spell=362617/oppression). Gateways will be used throughout the strategy.
@@ -159,6 +164,7 @@ The boss will grip everyone and apply [Chains of Oppression](https://www.wowhead
 link: https://www.wowhead.com/spell=362415/torment
 title: Torment
 subtitle: Spread Out
+unique: torment-p1
 ---
 This is the spread-out mechanic from Heroic that evolves throughout the fight. Melee should leave the space under the boss clear.
 ::
@@ -220,6 +226,7 @@ The first phase has the boss rotating around the platform for each bomb set and 
 link: https://www.wowhead.com/spell=366776/world-cracker
 title: World Cracker
 subtitle: Soak Pools
+unique: world-p2
 ---
 
 The boss attacks Azeroth and spawns blood as he did with [World Crusher](https://www.wowhead.com/spell=366377) in phase 1.
@@ -248,6 +255,7 @@ sources:
 link: https://www.wowhead.com/spell=360373/unholy-attunement
 title: Unholy Attunement
 subtitle: Break Pillars
+unique: unholy-p2
 ---
 
 [Unholy Attunement](https://www.wowhead.com/spell=360373/unholy-attunement) is the mechanic the Jailer uses to bring pillars out of the ground. Just as on Heroic, tanks will use [Shattering Blast](https://www.wowhead.com/spell=359868/shattering-blast) to destroy these pillars. 
@@ -269,6 +277,7 @@ This is only an example of tanks alternating (the different colors), pillars.
 link: https://www.wowhead.com/spell=366285/rune-of-compulsion
 title: Rune of Compulsion
 subtitle: Break MCs
+unique: rune-p2
 ---
 Phase 2's version of the rune mechanic mind-controls 3 players after a 4 second delay. One of the recommended WeakAuras will tell you to get under the boss. If [Torment](https://www.wowhead.com/spell=362415/torment) is happening at the same time these players should still stack under the boss, as they will become mind-controlled just before these go off.
 
@@ -284,6 +293,7 @@ Shamans can use Tremor Totem just before getting mind-controlled to dispel thems
 link: https://www.wowhead.com/spell=360562/decimator
 title: Decimator
 subtitle: Avoid
+unique: decim-p2
 ---
 The boss will periodically cast Decimator, a large blue swirly seen on Heroic. The swl and the thin blue line directly in front of the boss connected to the swirly are lethal. This no longer knocks back.
 ::
@@ -293,6 +303,7 @@ The boss will periodically cast Decimator, a large blue swirly seen on Heroic. T
 link: https://www.wowhead.com/spell=362415/torment
 title: Torment
 subtitle: Spread
+unique: torment-p2
 ---
 
 [Torment] evolves in phase 2 to leave behind a swirl that explodes 4 seconds after the initial torment hit goes off. This turns the mechanic into [Earthbreaker Missiles](https://www.wowhead.com/spell=361676/earthbreaker-missiles). Melee should leave a free space under the boss.
@@ -344,6 +355,7 @@ subtitle: Spread
 link: https://www.wowhead.com/spell=367051/world-shatterer
 title: World Shatterer
 subtitle: Soak Bloods
+unique: world-p3
 ---
 Just as with [World Cracker](https://www.wowhead.com/spell=366776/world-cracker) in phase 2 and [World Crusher](https://www.wowhead.com/spell=366377/world-crusher) in phase 1, the Jailer slaps Azeroth at the start of phase 3 and spawns bloods.
 
@@ -355,6 +367,7 @@ Given the recent nerfs it is unnecessary to heal Azeroth any further. It is actu
 link: https://www.wowhead.com/spell=365033/desolation
 title: Desolation
 subtitle: Save Azeroth
+unique: desol-p3
 ---
 As with Heroic the boss will face Azeroth and a column will eminate from him towards her. At least 17 people need to stand in this column to soak the effect to prevent Azeroth from taking too much damage and dying.
 ::
@@ -364,6 +377,7 @@ As with Heroic the boss will face Azeroth and a column will eminate from him tow
 link: https://www.wowhead.com/spell=365151/rune-of-domination
 title: Rune of Domination
 subtitle: Heal Absorb
+unique: rune-p3
 ---
 The rune mechanic of phase 3 is [Rune of Domination](https://www.wowhead.com/spell=365151/rune-of-domination). Three people are given a debuff that expires after 8 seconds, dealing 45k damage to those in its radius and applying [Dominating Will](https://www.wowhead.com/spell=365153/dominating-will) as an absorb shield split evenly with those who help soak with them.
 
@@ -375,6 +389,7 @@ This mechanic should no longer be seen as we'll push to 15% and forcing the Jail
 link: https://www.wowhead.com/spell=365219/chains-of-anguish
 title: Chains of Anguish
 subtitle: Snap Chains
+unique: chains-p3
 ---
 Seen on Heroic, [Chains of Anguish](https://www.wowhead.com/spell=365219/chains-of-anguish) go on the 3 players nearest the active tank, slowing these players and dealing damage.
 
@@ -386,6 +401,7 @@ When they go out the active tank will instantly snap all of the chains. Personal
 link: https://www.wowhead.com/spell=362415/torment
 title: Torment
 subtitle: Kill Adds
+unique: torment-p3
 ---
 In the third phase [Torment](https://www.wowhead.com/spell=362415/torment) only goes on 10 non-tank players and spawns the Incarnation of Torment adds that continously try to cast [Cry of Loathing](https://www.wowhead.com/spell=365385/cry-of-loathing) so long as they live. Since they cannot be gripped on Mythic we will utilize the [BGDD Jailer - P3 Torment Assignments (group)](https://wago.io/vTJwnSq41) WeakAura to stack 2 debuffs on top of each other at a time in close proximity for easy add cleave.
 
@@ -405,6 +421,7 @@ Then everyone will quickly nuke down the adds while keeping them stunned and int
 link: https://www.wowhead.com/spell=360565/decimator
 title: Decimator
 subtitle: Dodge Debris
+unique: decim-p3
 ---
 The "no-longer-knockback-knockback", [Decimator](https://www.wowhead.com/spell=360565/decimator) now also destroys the pylons above the platform in phase 3, raining down large circles of [Falling Debris](https://www.wowhead.com/spell=365810/falling-debris). They deal a large amount of **shadow** damage if caught in the fall.
 
@@ -416,6 +433,7 @@ The raid will stack in a location discussed in the strategy and move as a group 
 link: https://www.wowhead.com/spell=365174/defile
 title: Defile
 subtitle: Bait & Run
+unique: defile-p3
 ---
 [Defile](https://www.wowhead.com/spell=365174/defile) still targets only ranged as seen on Heroic. On Mythic, the defile pools slowly grow in size, requiring us to make dramatic movements away from them.
 
@@ -450,6 +468,7 @@ The strategy intends for us to only see one defile, but getting a second one is 
 link: https://www.wowhead.com/spell=360282/rune-of-damnation
 title: Rune of Damnation
 subtitle: Bombs
+unique: rune-p4
 ---
 This is the saame bomb mechanic as in phase 1. Jump in a random hole. We're not meant to stay in this phase for long at all.
 ::
@@ -459,6 +478,7 @@ This is the saame bomb mechanic as in phase 1. Jump in a random hole. We're not 
 link: https://www.wowhead.com/spell=362415/torment
 title: Torment
 subtitle: Spread & Run
+unique: torment-p4
 ---
 The phase 4 torment is the same as the phase 2 torment but also spawns a [Defile](https://www.wowhead.com/spell=365174/defile) afterwards.
 ::
@@ -468,6 +488,7 @@ The phase 4 torment is the same as the phase 2 torment but also spawns a [Defile
 link: https://www.wowhead.com/spell=360378/meteor-cleave
 title: Meteor Cleave
 subtitle: Soak
+unique: meteor-cleave-p4
 ---
 The active tank will be targeted by a conical soaking mechanic that needs to be soaked by everyone not getting rid of a bomb or is afflicted with [Death Sentence](https://www.wowhead.com/spell=363748/death-sentence). This will do a considerable knockback.
 ::
@@ -477,6 +498,7 @@ The active tank will be targeted by a conical soaking mechanic that needs to be 
 link: https://www.wowhead.com/spell=363748/death-sentence
 title: Death Sentence
 subtitle: Dispel & Catch
+unique: death-sentence-p4
 ---
 In phase 4 a player will be debuffed with [Death Sentence](https://www.wowhead.com/spell=363748/death-sentence). It does moderate damage that increases in intensity over time.
 
